taak volgorde: taak uitzetten

--- a/app/apps/main/templates/melding/detail/taken.html
+++ b/app/apps/main/templates/melding/detail/taken.html
@@ -67,6 +67,7 @@
                                     <div class="container__uitklapper">
                                         <span>{% include "icons/dots.svg" %}</span>
                                         <div class="legenda">
+                                                {% if not taak.afgesloten_op and not taak.verwijderd_op %}
                                                 <button type="button"
                                                         class="btn"
                                                         data-action="modal#openModal"
@@ -74,6 +75,16 @@
                                                     {% include "icons/bin.svg" %}
                                                     Taak verwijderen
                                                 </button>
+                                                {% endif %}
+                                                {% if not taak.uitgezet_op and not taak.verwijderd_op and taak.afhankelijkheid|length == 0 %}
+                                                <button type="button"
+                                                        class="btn"
+                                                        data-action="modal#openModal"
+                                                        data-modal-action-param="{% url 'taak_starten' melding.uuid taak.uuid %}">
+                                                    {% include "icons/bin.svg" %}
+                                                    Taak starten
+                                                </button>
+                                                {% endif %}
                                         </div>
                                     </div>
                                 {% endif %}
