kanaal and gebruiker for melding detail, melding detail cleanup, tab switch without reload

--- a/app/apps/main/templates/melding/detail/taken_aanmaken_stream.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_stream.html
@@ -1,8 +1,6 @@
-{% load context_template from context_tags %}
-{% context_template "melding_detail_acties.html" as acties_template %}
 {% include "melding/detail/taken.html" %}
 {% include "melding/detail/melding_detail_titel.html" %}
 {% include "melding/detail/taken_aanmaken_form.html" with form=form view=view only %}
 {% include "melding/detail/tijdlijn.html" with melding=melding only %}
-{% include acties_template %}
+{% include "melding/detail/acties.html" %}
 {% include "public/notificaties/toast_lijst.html" with messages=messages only %}
