--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -1,10 +1,8 @@
 {% load rotterdam_formulier_html %}
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
-{% load context_template from context_tags %}
 {% load melding_taken from melding_tags %}
 {% melding_taken melding as taak_info %}
-{% context_template "melding_afhandelen_terugkoppeling_gewenst.html" as terugkoppeling_gewenst_template %}
 <turbo-stream target="modal_header_title" action="update">
 <template>
     Melding afhandelen
@@ -25,7 +23,22 @@
 
                 <div class="{% if form.resolutie.value != 'opgelost' %}wrapper-sticky-footer{% else %}wrapper-no-sticky-footer{% endif %}">
                     <div class="flex-content" data-meldingbehandelformulier-target="contentContainer">
-                        {% include terugkoppeling_gewenst_template %}
+                        {% if melding.signalen_voor_melding.0.meta.terugkoppeling_gewenst == "Ja" and not melding.signalen_voor_melding.0.melder.email and melding.signalen_voor_melding.0.melder.telefoonnummer %}
+                            <div class="alert alert--info">
+                                <span>
+                                    <svg width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E" />
+                                    </svg>
+                                </span>
+                                <div>
+                                    Let op: de melder wil op de hoogte blijven maar beschikt niet over een e-mailadres. Het telefoonnummer van de melder is <a href="tel:{{ melding.signalen_voor_melding.0.melder.telefoonnummer }}">{{ melding.signalen_voor_melding.0.melder.telefoonnummer }}</a>.
+                                </div>
+                            </div>
+                        {% endif %}
                         {% if taak_info.aantal_actieve_taken > 0 %}
                             <div class="alert alert--v2 alert--info">
                                 <h2>
