--- a/app/apps/main/templates/melding/detail/melding_afhandelen_success.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_success.html
@@ -1,5 +1,3 @@
-{% load context_template from context_tags %}
-{% context_template "melding_detail_acties.html" as acties_template %}
 {% include "melding/detail/taken.html" %}
 {% include "melding/detail/melding_detail_titel.html" %}
 
@@ -15,6 +13,5 @@
 </template>
 </turbo-stream>
 
-{% include "melding/detail/tijdlijn.html" with melding=melding only %}
-{% include acties_template %}
+{% include "melding/detail/acties.html" %}
 {% include "public/notificaties/toast_lijst.html" with messages=messages only %}
