dashboard v2: styling fixes after review

--- a/app/apps/dashboard/templates/dashboard/v2/basis.html
+++ b/app/apps/dashboard/templates/dashboard/v2/basis.html
@@ -36,7 +36,7 @@
                 </div>
             </section>
             <section>
-                <div class="container__filters">
+                <div class="container__filters container__filters--margin-top">
                     <div class="container__inzicht">
                         <div class="container__inzicht__top">
                             <span data-dashboard-target="alleMeldingenAantal">{{alle_meldingen_aantal}}</span>
@@ -101,7 +101,7 @@
         </div>
         <div class="container__dashboard">
             <section>
-                <div class="container__filters">
+                <div class="container__filters container__filters--margin-bottom">
                     <div class="container__title">
                         <h1>
                             Actueel
@@ -116,7 +116,7 @@
         <hr/>
         <div class="container__dashboard">
             <section>
-                <div class="container__filters">
+                <div class="container__filters container__filters--margin-bottom">
                     <div class="container__title">
                         <h1>
                             Historisch
