--- a/app/frontend/assets/styles/components/_tables.scss
+++ b/app/frontend/assets/styles/components/_tables.scss
@@ -226,8 +226,10 @@
 }
 table.table {
     background-color: $white;
+    border-collapse: separate;
+    border-spacing: 0;
+    line-height: $line-height-base-v2;
 
-    table,
     tbody,
     thead,
     tfoot,
@@ -237,6 +239,23 @@ table.table {
         border-collapse: collapse;
         border-style: none;
     }
+    thead,
+    tfoot {
+        position: sticky;
+        background-color: $white;
+    }
+    thead {
+        inset-block-start: $top-bar-height;
+        th {
+            border-bottom: 1px solid $gray-600;
+        }
+    }
+    tfoot {
+        inset-block-end: 0;
+        th {
+            border-top: 1px solid $gray-600;
+        }
+    }
 
     tbody td:first-child,
     td,
@@ -244,6 +263,19 @@ table.table {
         font-size: $fz-12;
         padding: 11px 8px;
         text-align: left;
+    }
+
+    thead,
+    tfoot,
+    tbody {
+        td:first-child,
+        th:first-child {
+            padding-left: 16px;
+        }
+        td:last-child,
+        th:last-child {
+            padding-right: 16px;
+        }
     }
     tr:nth-child(even) {
         background-color: unset;
@@ -255,30 +287,34 @@ table.table {
     thead th {
         padding-top: 18px;
         padding-bottom: 18px;
-        text-wrap-mode: nowrap;
     }
     thead th .column-sorter {
+        display: flex;
         text-decoration: none;
+        align-items: center;
+    }
+    .column-sorter-label {
+        flex: 1;
+    }
+    .column-sorter-indicator {
         position: relative;
         display: block;
-        padding-right: 15px;
-
+        height: 14px;
+        width: 7px;
         &::before,
         &::after {
             position: absolute;
             content: url("../icons/arrow-down.svg");
-            width: 5px;
-            height: 3px;
-            right: 3px;
+            width: 7px;
+            height: 7.2px;
+            right: 0;
+            top: 4px;
         }
         &::before {
-            transform: rotate(180deg) translateY(-8px);
-        }
-        &::after {
-            transform: translateY(-1px);
+            transform: rotate(180deg);
         }
     }
-    thead th.table-sort-active.tabel-sort-direction-asc .column-sorter {
+    thead th.table-sort-active.tabel-sort-direction-asc .column-sorter-indicator {
         &::before {
             content: url("../icons/arrow-down-solid.svg");
         }
@@ -286,7 +322,7 @@ table.table {
             content: url("../icons/arrow-down.svg");
         }
     }
-    thead th.table-sort-active.tabel-sort-direction-desc .column-sorter {
+    thead th.table-sort-active.tabel-sort-direction-desc .column-sorter-indicator {
         &::before {
             content: url("../icons/arrow-down.svg");
         }
